<resources>
    <string name="tips">Tips</string>

    <string name="case_sens">Case sensitivity</string>
    <string name="storage_err">Error accessing memory</string>
    <string name="searching">Search…</string>
    <string name="search_stopped">Search was stopped</string>
    <string name="search_empty">Search returned no results</string>
    <string name="search_succeed">Search completed successfully</string>
    <string name="search_failed">Search ended with an error</string>
    <string name="search_for_content_result">Substrings: %d, files: %d, total files: %d</string>
    <string name="search_for_names_result">Files: %d, total files: %d</string>
    <string name="search_error">Error: %s</string>
    <string name="error">Error</string>
    <string name="nothing">Nothing found</string>
    <string name="warning">You have not selected any directory. The search will be made around the root section</string>
    <string name="cancel">Cancel</string>
    <string name="stop">Stop</string>
    <string name="no_activity">You have no application able to open a file of this type</string>
    <string name="results">Your search returned %d results</string>
    <string name="find">Find</string>
    <string name="search_in_the_content">Search in the files content</string>
    <string name="pref_search">@string/search</string>
    <string name="regex">Use regexp</string>
    <string name="multiline">\'Multiline\' flag</string>
    <string name="bad_ex">Incorrect regular expression</string>
    <string name="reset">Reset</string>
    <string name="no_checked">You didn\'t choose any directory!</string>
    <string name="theme">Theme</string>
    <string name="need_restart">Restart required</string>
    <string name="history">History</string>
    <string name="copy">Copy</string>
    <string name="copied">Copied</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="look">Look</string>
    <string name="done">Done</string>
    <string name="stopped">Stopped</string>
    <string name="options">Options</string>
    <string name="options_title">Options:</string>
    <string name="explorer">Files</string>
    <string name="replace">Replace</string>
    <string name="tasks">Tasks</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="pref_orientation">Screen orientation</string>
    <string name="fucking_provider">Сould not open file due to system limitations, try to copy the absolute path to the file and open it in another application</string>
    <string name="pref_home_screen">Home screen</string>
    <string name="pref_theme">App theme</string>
    <string name="pref_deep_black">Deep black</string>
    <string name="pref_max_depth">Max depth of the search</string>
    <string name="pref_max_size">Max file size</string>
    <string name="max_size_sum">If search in the content</string>
    <string name="pref_exclude_dirs">Exclude directories</string>
    <string name="exclude_dirs_summary">From search results</string>
    <string name="max_size_summary">When searching by content</string>
    <string name="pref_use_su">Use super user</string>
    <string name="preferences">Preferences</string>
    <string name="pref_about">About the App</string>
    <string name="look_github">Look the Github repository</string>
    <string name="faq_4pda">FAQ / Discuss</string>
    <string name="test_field">Test text field</string>
    <string name="try_find_this_text">Try to find this text</string>
    <string name="waiting_for_results">Waiting for the results…</string>
    <string name="no_access">No access</string>
    <string name="data_was_lost">Data was lost</string>
    <string name="search_completed">Search completed: %s</string>
    <string name="pref_special_characters">Special characters</string>
    <string name="search">Search</string>
    <string name="use_regular_expression">Use regular expression</string>
    <string name="enable_replace">Replace the text</string>
    <string name="exit">Exit</string>
    <string name="click_back_to_exit">Click Back to close the App</string>
    <string name="remove">Remove</string>
    <string name="rename">Rename</string>
    <string name="open_with">Open with</string>
    <string name="no_such_file">No such file</string>
    <string name="no_such_directory">No such directory</string>
    <string name="no_such_file_or_directory">No such file or directory</string>
    <string name="permission_denied">Permission denied</string>
    <string name="unknown_error">Unknown error</string>
    <string name="a_lot_of_errors">A lot of errors</string>
    <string name="not_allowed">Not allowed</string>
    <string name="pref_export_import">Export / Import</string>
    <string name="export_btn">Export</string>
    <string name="import_btn">Import</string>
    <string name="successful">Successful</string>
    <string name="successful_with_restart">Successful. Restart the App process</string>
    <string name="more">More</string>
    <string name="access_to_storage_forbidden">Access to the storage is forbidden</string>
    <string name="allow">Allow</string>
    <string name="confirm">Confirm</string>
    <string name="root_photos">Photos</string>
    <string name="root_videos">Videos</string>
    <string name="root_camera">Camera</string>
    <string name="root_downloads">Down&#8203;loads</string>
    <string name="root_bluetooth" translatable="false">Blue&#8203;tooth</string>
    <string name="root_screenshots">Screen&#8203;shots</string>
    <string name="internal_storage">Internal storage</string>
    <string name="external_storage">External storage</string>
    <string name="oops_not_working">Oops, not working yet</string>
    <string name="user_interface">Interface</string>
    <string name="pref_explorer_item">File / Directory</string>
    <string name="pref_joystick">ESC button\'s color</string>
    <string name="create">Create</string>
    <string name="create_file_or_dir">Create a file or directory</string>
    <string name="owner">Owner</string>
    <string name="group">Group</string>
    <string name="empty_check_box">Empty check box</string>
    <string name="item_explorer_background">Striped background</string>
    <string name="create_a_new">Create a new</string>
    <string name="a_name">Name</string>
    <string name="a_file">File</string>
    <string name="a_directory">Directory</string>
    <string name="inverse_glowing">Inverse highlight</string>
    <string name="inverse_for_dark">Inverse for Dark theme</string>
    <string name="pref_category_debug">Debug</string>
    <string name="pref_leak_canary" translatable="false">Leak Canary</string>
    <string name="root">Root</string>
    <string name="foreground_notification_name" translatable="false">Foreground Notification</string>
    <string name="result_notification_name" translatable="false">Result Notification</string>
    <string name="copy_path">Copy the absolute path</string>
    <string name="pref_category_system">System</string>
    <string name="pref_toybox">Toybox version</string>
    <string name="path_to_toybox">Path to toybox tool</string>
    <string name="toybox_64" translatable="false">toybox arm64</string>
    <string name="toybox_32" translatable="false">toybox arm32</string>
    <string name="toybox_x86_64" translatable="false">toybox x86_64</string>
    <string name="dismiss">Dismiss</string>
    <string name="got_it">Got it</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="update_available">Update is available</string>
    <string name="failed_check_updates">Failed to check for updates</string>
    <string name="update_loading">Update is loading now</string>
    <string name="update_downloaded">Update downloaded</string>
    <string name="get_update">Update</string>
    <string name="install">Install</string>
    <string name="channel_name_updates">Updates</string>
    <string name="tip">In Explorer specify where to search</string>
    <string name="search_here">Search here:</string>
    <string name="by_default">Reset to default</string>
    <string name="dash" translatable="false">—</string>
    <string name="fix_android_12">Starting from Android 12, the search may be interrupted by the system.\nThis issue will be fixed in the next updates.</string>
    <plurals name="x_dirs">
        <item quantity="zero">%d directories</item>
        <item quantity="one">%d directory</item>
        <item quantity="two">%d directories</item>
        <item quantity="few">%d directories</item>
        <item quantity="many">%d directories</item>
        <item quantity="other">%d directories</item>
    </plurals>
    <plurals name="x_files">
        <item quantity="zero">%d files</item>
        <item quantity="one">%d file</item>
        <item quantity="two">%d files</item>
        <item quantity="few">%d files</item>
        <item quantity="many">%d files</item>
        <item quantity="other">%d files</item>
    </plurals>
</resources>
