<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference
        app:title="@string/pref_about"
        app:key="pref_about"
        app:icon="@drawable/ic_info"
        />
    <PreferenceCategory
        app:title="@string/preferences">
        <app.atomofiron.searchboxapp.custom.preference.DropDownPreference
            app:title="@string/pref_home_screen"
            app:key="pref_home_screen"
            app:entries="@array/home_var"
            app:entryValues="@array/home_val"
            app:icon="@drawable/ic_home"
            />
        <SwitchPreferenceCompat
            app:title="@string/pref_use_su"
            app:key="pref_use_su"
            app:defaultValue="false"
            app:icon="@drawable/ic_hash"
            app:widgetLayout="@layout/widget_switch"
            />
    </PreferenceCategory>
    <PreferenceCategory
        app:title="@string/pref_search">
        <app.atomofiron.searchboxapp.custom.preference.TextFieldPreference
            app:title="@string/pref_special_characters"
            app:key="pref_special_characters"
            app:defaultValue="\\ [ { ? + * ^ $"
            app:icon="@drawable/ic_symbols"
            />
        <app.atomofiron.searchboxapp.custom.preference.NumberPreference
            app:title="@string/pref_max_depth"
            app:key="pref_max_depth"
            app:defaultValue="1024"
            app:icon="@drawable/ic_tornado"
            />
        <CheckBoxPreference
            app:title="@string/pref_exclude_dirs"
            android:key="pref_exclude_dirs"
            android:summary="@string/exclude_dirs_summary"
            app:widgetLayout="@layout/widget_checkbox"
            app:icon="@drawable/ic_folder_eye"
            />
        <app.atomofiron.searchboxapp.custom.preference.ByteSizePreference
            app:title="@string/pref_max_size"
            app:key="pref_max_size"
            app:defaultValue="10485760"
            android:summary="@string/max_size_summary"
            app:icon="@drawable/ic_weight"
            />
    </PreferenceCategory>
    <PreferenceCategory
        app:title="@string/user_interface">
        <app.atomofiron.searchboxapp.custom.preference.DropDownPreference
            app:title="@string/pref_theme"
            app:key="pref_app_theme"
            app:entries="@array/theme_var"
            app:entryValues="@array/theme_val"
            app:icon="@drawable/ic_theme"
            />
        <SwitchPreferenceCompat
            app:title="@string/pref_deep_black"
            app:key="pref_deep_black"
            app:defaultValue="false"
            app:widgetLayout="@layout/widget_switch"
            />
        <app.atomofiron.searchboxapp.custom.preference.DropDownPreference
            app:title="@string/pref_orientation"
            app:key="pref_app_orientation"
            app:entries="@array/orientation_var"
            app:entryValues="@array/orientation_val"
            app:icon="@drawable/ic_screen_rotation"
            />
        <Preference
            app:title="@string/pref_explorer_item"
            app:key="pref_explorer_item"
            app:icon="@drawable/ic_folder"
            />
        <Preference
            app:title="@string/pref_joystick"
            app:key="pref_joystick"
            app:icon="@drawable/ic_esc_circle"
            />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="pref_category_system"
        app:title="@string/pref_category_system">
        <Preference
            app:title="@string/pref_export_import"
            app:key="pref_export_import"
            app:icon="@drawable/ic_export_import"
            />
        <Preference
            app:title="@string/pref_toybox"
            app:key="pref_toybox"
            app:icon="@drawable/ic_shell"
            />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="pref_category_debug"
        app:title="@string/pref_category_debug">
        <SwitchPreferenceCompat
            app:title="@string/pref_leak_canary"
            app:key="pref_leak_canary"
            app:widgetLayout="@layout/widget_switch"
            />
    </PreferenceCategory>
</PreferenceScreen>