<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/item_ll_config"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="@dimen/common_margin_half">
    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/config_cb_case_sense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/case_sens"
        android:ellipsize="none"
        android:singleLine="true"
        android:checked="true"
        />
    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/config_cb_use_regexp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/use_regular_expression"
        android:ellipsize="none"
        android:singleLine="true"
        />
    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/config_cb_in_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_in_the_content"
        android:ellipsize="none"
        android:singleLine="true"
        />
    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/config_cb_exclude_dirs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pref_exclude_dirs"
        android:singleLine="true"
        />
    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/config_cb_replace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enable_replace"
        android:ellipsize="none"
        android:singleLine="true"
        android:visibility="gone"
        />
</LinearLayout>
