<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ru.atomofiron.regextool.MainActivity">
    <item
        android:id="@+id/menu_tasks"
        android:title="@string/tasks"
        android:icon="@drawable/ic_sand"
        />
    <item
        android:id="@+id/menu_search"
        android:title="@string/search"
        android:icon="@drawable/ic_search"
        />
    <item
        android:title=""
        android:enabled="false"
        />
    <item
        android:id="@+id/menu_config"
        android:title="@string/config"
        android:icon="@drawable/ic_options"
        />
    <item
        android:id="@+id/menu_settings"
        android:title="@string/settings"
        android:icon="@drawable/ic_settings"
        />
</menu>
