<?xml version="1.0" encoding="utf-8"?>
<com.google.android.flexbox.FlexboxLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingHorizontal="9dp"
    android:paddingVertical="@dimen/common_margin_half"
    app:flexWrap="wrap"
    >
    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginBottom="@dimen/common_margin_half"
        android:textSize="@dimen/title_size"
        android:textColor="?attr/colorContent"
        android:textStyle="bold"
        android:text="@string/options_title"
        />
    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/config_cb_case_sense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/common_margin"
        android:text="@string/case_sens"
        android:ellipsize="none"
        android:singleLine="true"
        android:checked="true"
        />
    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/config_cb_use_regexp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/common_margin"
        android:text="@string/use_regular_expression"
        android:ellipsize="none"
        android:singleLine="true"
        />
    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/config_cb_in_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/common_margin"
        android:text="@string/search_in_the_content"
        android:ellipsize="none"
        android:singleLine="true"
        />
    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/config_cb_exclude_dirs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="0dp"
        android:text="@string/pref_exclude_dirs"
        android:singleLine="true"
        />
    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/config_cb_replace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enable_replace"
        android:ellipsize="none"
        android:singleLine="true"
        android:visibility="gone"
        />
</com.google.android.flexbox.FlexboxLayout>
