<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="app.atomofiron.searchboxapp.MainActivity">
    <item
        android:id="@+id/menu_progress"
        android:icon="@drawable/ic_circle_check"
        android:checkable="false"
        />
    <item
        android:id="@+id/menu_search"
        android:title="@string/search"
        android:icon="@drawable/ic_search"
        />
    <item
        android:id="@+id/stub"
        android:title=""
        android:enabled="false"
        />
    <item
        android:id="@+id/menu_previous"
        android:title="@string/previous"
        android:icon="@drawable/ic_previous"
        android:enabled="false"
        />
    <item
        android:id="@+id/menu_next"
        android:title="@string/next"
        android:icon="@drawable/ic_next"
        android:enabled="false"
        />
</menu>
