<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/preference_tv_path_to_toybox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/path_to_toybox"
        android:layout_marginStart="@dimen/bottom_sheet_title_margin"
        android:layout_marginBottom="@dimen/common_margin_half"
        android:textSize="@dimen/bottom_sheet_title_size"
        android:textColor="?attr/colorContent"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/preference_rb_container"
        />
    <LinearLayout
        android:id="@+id/preference_rb_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="@dimen/common_margin"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/preference_tv_path_to_toybox"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/preference_rb_path_to_toybox"
                android:layout_width="36dp"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/common_margin_half"
                android:paddingBottom="@dimen/common_margin_half"
                />
            <ru.atomofiron.regextool.custom.view.AutoHideKeyboardField
                android:id="@+id/preference_et_path_to_toybox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:imeOptions="actionDone"
                android:inputType="textNoSuggestions"
                />
        </LinearLayout>
        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/preference_rb_toybox_64"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/toybox_64"
            android:padding="@dimen/common_margin_half"
            />
        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/preference_rb_toybox_32"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/toybox_32"
            android:padding="@dimen/common_margin_half"
            />
        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/preference_rb_toybox_x86_64"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/toybox_x86_64"
            android:padding="@dimen/common_margin_half"
            />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>