<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/explorer_create_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/curtain_title_margin"
        android:layout_marginBottom="@dimen/common_margin_half"
        android:textSize="@dimen/curtain_title_size"
        android:textColor="?attr/colorContent"
        android:textStyle="bold"
        android:text="@string/create_a_new"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <app.atomofiron.searchboxapp.custom.view.AutoHideKeyboardField
        android:id="@+id/explorer_create_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/common_margin"
        android:imeOptions="actionDone"
        app:layout_constraintTop_toBottomOf="@+id/explorer_create_tv"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/explorer_create_file_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="@dimen/common_margin"
        android:layout_marginVertical="@dimen/common_margin"
        android:text="@string/a_file"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        app:cornerRadius="@dimen/infinity"
        app:layout_constraintTop_toBottomOf="@+id/explorer_create_et"
        app:layout_constraintEnd_toStartOf="@+id/explorer_create_dir_btn"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/explorer_create_dir_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="@dimen/common_margin"
        android:layout_marginVertical="@dimen/common_margin"
        android:text="@string/a_directory"
        app:cornerRadius="@dimen/infinity"
        app:layout_constraintTop_toBottomOf="@+id/explorer_create_et"
        app:layout_constraintEnd_toEndOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>