<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/lei_tv_path"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="/storage/0/emulated/Android/data/app.atomofiron.searchboxapp/files/"
        android:paddingStart="@dimen/common_margin"
        android:paddingEnd="@dimen/common_margin"
        android:gravity="center_horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/lei_rg_target"
        />
    <RadioGroup
        android:id="@+id/lei_rg_target"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lei_tv_path"
        app:layout_constraintRight_toLeftOf="@+id/lei_rg_action"
        app:layout_constraintBottom_toTopOf="@+id/lei_btn"
        >
        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/lei_rb_preferences"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/preferences"
            android:checked="true"
            android:padding="@dimen/common_margin_half"
            />
        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/lei_rb_history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/history"
            android:padding="@dimen/common_margin_half"
            />
    </RadioGroup>
    <RadioGroup
        android:id="@+id/lei_rg_action"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintLeft_toRightOf="@+id/lei_rg_target"
        app:layout_constraintTop_toBottomOf="@+id/lei_tv_path"
        app:layout_constraintRight_toRightOf="parent"
        >
        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/lei_rb_export"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/export_btn"
            android:padding="@dimen/common_margin_half"
            android:checked="true"
            />
        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/lei_rb_import"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/import_btn"
            android:padding="@dimen/common_margin_half"
            />
    </RadioGroup>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/lei_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/export_btn"
        android:checked="true"
        android:layout_margin="@dimen/common_margin_half"
        app:cornerRadius="@dimen/infinity"
        app:backgroundTint="?attr/colorAccent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lei_rg_target"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>